--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                 <div class="about-image">
                     <!-- Placeholder for image -->
                     <div style="width:100%; height:400px; background-color:#e9ecef; display:flex; align-items:center; justify-content:center; color:var(--primary); font-size:1.5rem;">
-                        Dr. Bismark Osei Photo
+                     <img src="Bis/mark.jpg" alt="Dr. Bismark Osei Photo" />
                     </div>
                 </div>
                 <div class="about-text">
