--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
             </div>
             
             <div class="copyright">
-                <p>&copy; 2025 Dr. Bismark Osei. All Rights Reserved.</p>
+                <p>&copy; 2025 Developed by calebdigitalconsult(+233 597064511). All Rights Reserved.</p>
             </div>
         </div>
     </footer>
