--- a/index.html
+++ b/index.html
@@ -818,6 +818,24 @@
         <div class="container">
             <h2 class="section-title">Latest Videos</h2>
             <div class="videos-container">
+                <!-- NEW VIDEO: Empowerment Ministry of the Holy Spirit -->
+                <div class="video-card">
+                    <div class="video-thumbnail">
+                        <img src="https://images.unsplash.com/photo-1531538606174-0f90ff5dce83?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="Empowerment Ministry of the Holy Spirit">
+                        <a href="https://youtu.be/7sLrVkaCqRM?si=KKUzPUU_Mqmat5e5" target="_blank" class="video-play">
+                            <i class="fas fa-play"></i>
+                        </a>
+                    </div>
+                    <div class="video-info">
+                        <h3>Empowerment Ministry of the Holy Spirit</h3>
+                        <p>Focus: Sermon | Duration: 30 minutes</p>
+                        <div class="video-meta">
+                            <span><i class="far fa-calendar"></i> New Release</span>
+                            <span><i class="fab fa-youtube"></i> YouTube</span>
+                        </div>
+                    </div>
+                </div>
+                
                 <!-- Video 1 -->
                 <div class="video-card">
                     <div class="video-thumbnail">
