--- a/index.html
+++ b/index.html
@@ -817,6 +817,18 @@
     <section id="videos">
         <div class="container">
             <h2 class="section-title">Latest Videos</h2>
+             <div class="videos-container">
+     <!-- NEW VIDEO: Victory is your Name -->
+     <div class="video-card">
+         <div class="video-thumbnail">
+             <img src="Bis/time.jpg" alt="God is never late ">
+             <a href="https://youtu.be/sqe0wguoqLE?si=EpGiPlo3SJKoqI-x" target="_blank" class="video-play">
+                 <i class="fas fa-play"></i>
+             </a>
+         </div>
+         <div class="video-info">
+             <h3>God is never late</h3>
+             <p>Focus: Sermon | Duration: 30 minutes</p>
             <div class="videos-container">
                 <!-- NEW VIDEO: Victory is your Name -->
                 <div class="video-card">
