--- a/index.html
+++ b/index.html
@@ -829,6 +829,11 @@
          <div class="video-info">
              <h3>God is never late</h3>
              <p>Focus: Sermon | Duration: 30 minutes</p>
+              <span><i class="far fa-calendar"></i> New Release</span>
+ <span><i class="fab fa-youtube"></i> YouTube</span>
+ </div>
+ </div>
+ </div>
             <div class="videos-container">
                 <!-- NEW VIDEO: Victory is your Name -->
                 <div class="video-card">
@@ -842,7 +847,7 @@
                         <h3>Victory is your Name</h3>
                         <p>Focus: Sermon | Duration: 30 minutes</p>
                         <div class="video-meta">
-                            <span><i class="far fa-calendar"></i> New Release</span>
+                            <span><i class="far fa-calendar"></i>Last week</span>
                             <span><i class="fab fa-youtube"></i> YouTube</span>
                         </div>
                     </div>
@@ -860,7 +865,7 @@
                         <h3>Empowerment Ministry of the Holy Spirit</h3>
                         <p>Focus: Sermon | Duration: 30 minutes</p>
                         <div class="video-meta">
-                            <span><i class="far fa-calendar"></i> Recently Added</span>
+                            <span><i class="far fa-calendar"></i> Early December update</span>
                             <span><i class="fab fa-youtube"></i> YouTube</span>
                         </div>
                     </div>
