--- a/index.html
+++ b/index.html
@@ -1134,9 +1134,29 @@
             <h2 class="section-title">Latest Videos</h2>
             <div class="videos-container">
                 
+                <!-- NEW VIDEO 2: The Prayer of Samson (Part 4) -->
+<div class="video-card">
+    <div class="new-badge">New Release</div>
+    <div class="video-thumbnail">
+        <img src="https://images.unsplash.com/photo-1531538606174-0f90ff5dce83?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="The Prayer of Samson (Part 4)">
+        <a href="https://youtu.be/e3-fw0JrAeg?si=hAu6UqySg7XbOz99" target="_blank" class="video-play">
+            <i class="fas fa-play"></i>
+        </a>
+    </div>
+    <div class="video-info">
+        <h3>The Prayer of Samson (Part 4)</h3>
+        <p>Focus: Sermon | Duration: 30 minutes</p>
+        <p>Please watch, subscribe and send your comments.</p>
+        <div class="video-meta">
+            <span><i class="far fa-calendar"></i> New Release</span>
+            <span><i class="fab fa-youtube"></i> YouTube</span>
+        </div>
+    </div>
+</div>
+                
                   <!-- NEW VIDEO 2: The Prayer of Samson (Part 3) -->
   <div class="video-card">
-      <div class="new-badge">New Release</div>
+      <div class="new-badge">Tap to watch</div>
       <div class="video-thumbnail">
           <img src="https://images.unsplash.com/photo-1531538606174-0f90ff5dce83?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="The Prayer of Samson (Part 3)">
           <a href="https://youtu.be/kFZQBSkqRb8?si=k5pEeGvhdil97mXb" target="_blank" class="video-play">
